fix: scrollbar main layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ html, body, :root, #root {
 
 /* TrackSideSheet */
 ::-webkit-scrollbar-track {
-    background: transparent;
+    background: theme('colors.background');
 }
 
 /* Handle */
